// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword @render default state 1`] = `
<section
  className="ResetPassword ResetPassword-form"
>
  <Form
    noValidate={true}
    onSubmit={[Function]}
  >
    <h3>
      Enter New Password
    </h3>
    <p>
      We recommend choosing a password that you haven't used for another online account
    </p>
    <Connect(Input)
      errors={
        Object {
          "email": "This field is required",
          "password": "Check password criteria.",
        }
      }
      field={
        Object {
          "isDirty": false,
          "isFocused": false,
          "isTouched": false,
          "value": "",
        }
      }
      isRequired={true}
      label="New password"
      name="password"
      placeholder="New password"
      setField={[Function]}
      touchedField={[Function]}
      type="password"
    />
    <PasswordCriteriaIndicator
      isTouched={false}
      password=""
    />
    <Button
      className="ResetPassword-saveChanges"
      isDisabled={true}
      type="submit"
    >
      Save New Password
    </Button>
  </Form>
</section>
`;

exports[`ResetPassword @render invalid email data 1`] = `
<section
  className="ResetPassword"
>
  <div
    className="ResetPassword-form"
  >
    <h3>
      Reset password
    </h3>
    <Message
      isCompact={false}
      message="This reset password link is invalid."
      type="error"
    />
  </div>
</section>
`;

exports[`ResetPassword @render invalid form 1`] = `
<section
  className="ResetPassword ResetPassword-form"
>
  <Form
    noValidate={true}
    onSubmit={[Function]}
  >
    <h3>
      Enter New Password
    </h3>
    <p>
      We recommend choosing a password that you haven't used for another online account
    </p>
    <Connect(Input)
      errors={
        Object {
          "password": "Check password criteria.",
        }
      }
      field={
        Object {
          "isDirty": true,
          "isFocused": false,
          "isTouched": true,
          "value": "Arcadia",
        }
      }
      isRequired={true}
      label="New password"
      name="password"
      placeholder="New password"
      setField={[Function]}
      touchedField={[Function]}
      type="password"
    />
    <PasswordCriteriaIndicator
      isTouched={true}
      password="Arcadia"
    />
    <Message
      isCompact={false}
      message="You have already used that password, try another"
      type="error"
    />
    <Button
      className="ResetPassword-saveChanges"
      isDisabled={true}
      type="submit"
    >
      Save New Password
    </Button>
  </Form>
</section>
`;

exports[`ResetPassword @render valid form 1`] = `
<section
  className="ResetPassword ResetPassword-form"
>
  <Form
    noValidate={true}
    onSubmit={[Function]}
  >
    <h3>
      Enter New Password
    </h3>
    <p>
      We recommend choosing a password that you haven't used for another online account
    </p>
    <Connect(Input)
      errors={Object {}}
      field={
        Object {
          "isDirty": true,
          "isFocused": false,
          "isTouched": true,
          "value": "Arcadia2",
        }
      }
      isRequired={true}
      label="New password"
      name="password"
      placeholder="New password"
      setField={[Function]}
      touchedField={[Function]}
      type="password"
    />
    <PasswordCriteriaIndicator
      isTouched={true}
      password="Arcadia2"
    />
    <Message
      isCompact={false}
      message="🎉"
      type="confirm"
    />
    <Button
      className="ResetPassword-saveChanges"
      type="submit"
    >
      Save New Password
    </Button>
  </Form>
</section>
`;
